<resources>
    <string name="app_name" translatable="false">Bangumi</string>
    <string name="cover">Cover</string>
    <string name="watched">Watched</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="ep_text">Ep: %s</string>
    <string name="empty">Nothing here~\n</string>
    <string name="settings">Settings</string>
    <string name="mark">Mark</string>
    <string name="episode">Episode</string>
    <string name="ep_current">Current Episode</string>
    <string name="ep_total">Total Episode</string>
    <string name="add">Add</string>
    <string name="discard_changes">Discard changes</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="discard_changes_message">Do you want to discard the changes?</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="edit_with">Edit "%s"</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="image">Image</string>
    <string name="set_title">Set title</string>
    <string name="set_desc">Set description</string>
    <string name="set_curep">Set current ep</string>
    <string name="set_ttlep">Set total ep</string>
    <string name="delete_with">Delete \"%s\"?</string>
    <string name="delete_with_message">Do you want to delete \"%s\"?</string>
    <string name="hide_finished">Hide finished</string>
    <string name="manage_tags">Manage tags</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="priority">Priority</string>
    <string name="set_name">Set name</string>
    <string name="set_color">Set color</string>
    <string name="set_priority">Set priority</string>
    <string name="color_parse_error">Invalid color: %s</string>
    <string name="offset">Offset</string>
    <string name="tags">Tags</string>
    <string name="set_tags">Set tags</string>
    <string name="set_cover">Set cover</string>
    <string name="remove_cover">Remove cover</string>
    <string name="select_from_file">Select from file…</string>
    <string name="remove_cover_message">Do you want to remove the cover?</string>
</resources>