<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <me.kyuubiran.bangumi.view.ClickableItem
            android:id="@+id/cover_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:minHeight="80dp"
            app:showRightArray="false"
            app:title="@string/cover" />

        <me.kyuubiran.bangumi.view.ClickableItem
            android:id="@+id/title_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title" />

        <me.kyuubiran.bangumi.view.ClickableItem
            android:id="@+id/desc_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/description" />

        <me.kyuubiran.bangumi.view.ClickableItem
            android:id="@+id/curep_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/ep_current" />

        <me.kyuubiran.bangumi.view.ClickableItem
            android:id="@+id/ttlep_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/ep_total" />

        <me.kyuubiran.bangumi.view.ClickableItem
            android:id="@+id/tags_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/tags" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bangumi_modify_save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/save"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_save_24"
        app:tint="@color/forground" />

</androidx.constraintlayout.widget.ConstraintLayout>

